--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "pydantic-settings>=2.1.0",
     "click>=8.1.0",
     "rich>=13.7.0",
+    "textual>=0.60.0",
 ]
 
 [project.optional-dependencies]
@@ -25,7 +26,7 @@ dev = [
 ]
 
 [project.scripts]
-bash-ai = "bash_ai.cli:main"
+bash-ai = "bash_ai.ui.cli:main"
 
 [build-system]
 requires = ["hatchling"]
