--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "bash-ai"
 version = "0.1.0"
 description = "AI-powered bash environment enhancement tool using Google ADK"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.10"
 dependencies = [
     "google-adk>=1.20.0",
     "python-dotenv>=1.0.0",
@@ -57,7 +57,7 @@ line-length = 100
 target-version = ["py312"]
 
 [tool.mypy]
-python_version = "3.12"
+python_version = ">=3.10"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = false
