--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [project]
 name = "bash-ai"
 version = "0.1.0"
-description = "AI-powered bash environment enhancement tool using Google ADK"
+description = "AI-powered bash environment enhancement tool using LiteLLM"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "google-adk>=1.20.0",
+    "litellm>=1.40.0",
     "python-dotenv>=1.0.0",
     "pydantic>=2.5.0",
     "pydantic-settings>=2.1.0",
